# space-invaders

./: Cargo.toml  README.md
config/: config.json
src/: game.rs  main.rs  scenes.rs
src/game/: input.rs  scene.rs
src/scenes/: game_over_scene.rs  main_menu_scene.rs  space_scene.rs
src/scenes/main_menu_scene/: button.rs
src/scenes/space_scene/: alien.rs  spaceship.rs
src/scenes/space_scene/spaceship/: bullet.rs
