[package]
name = "game-engine"
version = "0.1.0"
authors = ["Matt Schafer <lucidsigma17@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
serde_json = "1.0"
specs = "0.16.1"
specs-derive = "0.4.1"

[dependencies.sdl2]
version = "0.34.2"
default-features = false
features = ["image"]